// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#DefaultValueRenderer should render the leading/trailing special character 1`] = `
<DocumentFragment>
  <div
    class="theme-td-default-cell td-default-cell"
  >
    <span>
      <svg
        aria-hidden="true"
        aria-label="space character"
        class="sc-jSMfEi ifGbCq tc-svg-icon tc-icon theme-td-white-space-character td-white-space-character tc-icon-name-talend-empty-space"
        focusable="false"
        name="talend-empty-space"
        pointer-events="none"
      />
      <span
        class="theme-td-value td-value"
      >
        loreum
      </span>
      <svg
        aria-hidden="true"
        aria-label="space character"
        class="sc-jSMfEi ifGbCq tc-svg-icon tc-icon theme-td-white-space-character td-white-space-character tc-icon-name-talend-empty-space"
        focusable="false"
        name="talend-empty-space"
        pointer-events="none"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`#DefaultValueRenderer should render without the tooltip 1`] = `
<DocumentFragment>
  <div
    class="theme-td-default-cell td-default-cell"
  >
    <span>
      loreum
    </span>
  </div>
</DocumentFragment>
`;
